# ds-algorithm-problem-solving-c-cpp

./: .gitignore  CMakeLists.txt  prime.cpp
